[package]
name = "llm-bridge"
version = "0.1.0"
edition = "2021"
authors = ["Sam Keen <sam.sjk@gmail.com>"]
description = "SDK for interacting with various Large Language Model (LLM) APIs using a common interface"
license = "MIT"
repository = "https://github.com/samkeen/llm-bridge"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.12.3", features = ["json"] }
serde = { version = "1.0.197", features = ["derive"] }
thiserror = "1.0.58"
serde_json = "1.0.115"
log = "0.4.21"
async-trait = "0.1.80"

[dev-dependencies]
dotenv = "0.15.0"
tokio = { version = "1.37.0", features = ["rt", "macros"] }
pretty_assertions = "1.4.0"
