[package]
name = "llm-bridge"
version = "0.1.1"
edition = "2021"
authors = ["Sam Keen <sam.sjk@gmail.com>"]
description = "SDK for interacting with various Large Language Model (LLM) APIs using a common interface"
license = "MIT"
repository = "https://github.com/samkeen/llm-bridge"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.12.5", features = ["json"] }
serde = { version = "1.0.204", features = ["derive"] }
thiserror = "1.0.61"
serde_json = "1.0.120"
log = "0.4.22"
async-trait = "0.1.81"

[dev-dependencies]
dotenv = "0.15.0"
tokio = { version = "1.38.0", features = ["rt-multi-thread","rt", "macros"] }
pretty_assertions = "1.4.0"
